--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "personal-portfolio",
   "version": "0.1.0",
+  "homepage": "https://aman123424.github.io/personal-portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
-    "gh-pages": "^6.0.0",
     "google-spreadsheet": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +21,8 @@
     "web3": "^1.6.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
